--- a/src/userCommentManagemen/UserCommentManagement.css
+++ b/src/userCommentManagemen/UserCommentManagement.css
@@ -1,9 +1,31 @@
+/*General Styling*/
+* {
+    padding: 0;
+    margin: 0;
+    box-sizing: border-box;
+}
+
+html {
+    font-size: 62.5%;
+}
+
+body {
+    color: #333;
+    font: 1.6rem sans-serif;
+}
+
+/*My Comment Styles*/
+
 .label {
   text-align: center;
   margin-top: 10px;
 }
 
 .content {
-  width: 80%;
+  width: 90%;
   margin: auto;
+}
+
+.table btn {
+    font-size: 1.3rem;
 }
