--- a/src/detail/Detail.css
+++ b/src/detail/Detail.css
@@ -1,4 +1,51 @@
-.detail {
-  width: 80%;
-  margin: auto;
+/*General Styling*/
+* {
+    padding: 0;
+    margin: 0;
+    box-sizing: border-box;
+}
+
+html {
+    font-size: 62.5%;
+}
+
+body {
+    color: #333;
+    font: 1.6rem sans-serif;
+}
+
+/*Cart Styles*/
+.container-cart {
+    display: flex;
+    justify-content: space-between;
+    align-items: flex-start;
+    flex-wrap: wrap;
+}
+
+.container-cart > img {
+    width: 45rem;
+}
+
+.action a {
+    display: flex;
+    flex-direction: column;
+    width: 15rem;
+    margin-bottom: 3rem;
+}
+
+.container-cart table {
+    border-collapse: collapse;
+    margin: 3rem;
+    font-size: 1.5rem;
+    width: 40rem;
+    box-shadow: 0 0 20px rgba(0, 0, 0, 0.15);
+}
+
+.container-cart td {
+    padding: 12px 15px;
+    border-bottom: 1px solid #dddddd;
+}
+
+.container-cart td:first-of-type {
+    font-weight: 700;
 }
