--- a/src/homepage/Home.css
+++ b/src/homepage/Home.css
@@ -70,7 +70,7 @@ section > h1, section > input{
     display: flex;
     flex-wrap: wrap;
     gap: 15rem 1.5rem;
-    justify-content: space-between;
+    justify-content: space-evenly;
 }
 
 .container-product img {
@@ -179,6 +179,11 @@ section > h1, section > input{
 
 .product-form .description {
     height: 20rem;
+}
+
+.product-form textarea {
+    border-color: #BFBFBF;
+    color: #BFBFBF;
 }
 
 .content Input{
