--- a/src/homepage/Home.css
+++ b/src/homepage/Home.css
@@ -11,7 +11,6 @@ html {
 
 body {
     color: #333;
-    background-color: #ddd;
     font: 1.6rem sans-serif;
 }
 
@@ -65,6 +64,11 @@ footer a{
 /*List Product Styling*/
 section {
     margin: 3rem 5rem 20rem;
+}
+
+.background-color {
+    background-color: #fff;
+
 }
 
 section > h1, section > input{
